--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-asgiref==3.8.1
+asgiref==3.8.
+async-timeout==5.0.1
 attrs==25.3.0
 Django==5.2.3
+django-redis==6.0.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
@@ -9,6 +11,7 @@ jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 PyJWT==2.9.0
 PyYAML==6.0.2
+redis==6.4.0
 referencing==0.36.2
 rpds-py==0.26.0
 sqlparse==0.5.3
